# rodeo

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: main.yml  rust-clippy.yml  rust-miri.yml  rust-msrv.yml  rust-nightly.yml  rust.yml
benches/: main.rs
src/: bumpalo.rs  fallback.rs  lib.rs  tests.rs
tests/: tracing.rs
