[package]
name = "rodeo"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast dropping arena based on bumpalo"
authors = ["polazarus"]
categories = ["memory-management", "rust-patterns", "no-std"]
keywords = ["dropping", "arena", "allocation", "bumpalo"]
readme = "./README.md"
repository = "https://github.com/polazarus/rodeo"
rust-version = "1.73.0"

[features]
default = ["bumpalo", "std"]
std = []

[dependencies]
bumpalo = { version = "3.15.4", optional = true }

[dev-dependencies]
criterion = "0.5.1"
typed-arena = "2.0.2"

[[bench]]
name = "main"
harness = false
